styling for smooth transition

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <a href="https://www.linkedin.com/in/mikhsanpasaribu/" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer">
+                    <a href="https://github.com/MIkhsanPasaribu" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-github"></i>
                     </a>
                 </div>
@@ -233,7 +233,7 @@
             <p>&copy; 2023 M. Ikhsan Pasaribu. All rights reserved.</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/mikhsanpasaribu/"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/MIkhsanPasaribu"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
