--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="M. Ikhsan Pasaribu - Software Engineer Portfolio">
+    <meta name="keywords" content="software engineer, web developer, AI/ML engineer, portfolio">
+    <meta name="author" content="M. Ikhsan Pasaribu">
+    <meta property="og:title" content="M. Ikhsan Pasaribu - Portfolio">
+    <meta property="og:description" content="Software Engineer Portfolio">
+    <meta property="og:image" content="assets/San.jpg">
+    <meta property="og:url" content="">
     <title>M. Ikhsan Pasaribu - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="favicon/I for Ikhsan.png">
+    <link rel="apple-touch-icon" href="favicon/M word.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
@@ -241,5 +250,8 @@
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
+    <a href="" class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </a>
 </body>
 </html>
