--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </div>
                     <div class="info-item">
                         <strong>Email:</strong>
-                        <span>mikhsanpasaribu@gmail.com</span>
+                        <span>mikhsanpasaribu2@gmail.com</span>
                     </div>
                     <div class="info-item">
                         <strong>Location:</strong>
@@ -97,6 +97,9 @@
                     </a>
                     <a href="https://github.com/MIkhsanPasaribu" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.instagram.com/m.ikhsanp1/" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
@@ -206,7 +209,7 @@
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
                     <h3>Email</h3>
-                    <p>mikhsanpasaribu@gmail.com</p>
+                    <p>mikhsanpasaribu2@gmail.com</p>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
@@ -243,6 +246,7 @@
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/mikhsanpasaribu/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/MIkhsanPasaribu"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/m.ikhsanp1/"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </footer>
