Add Facebook social link to footer and navigation

--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
               rel="noopener noreferrer"
             >
               <i class="fab fa-instagram"></i>
+            <a
+              href="https://www.instagram.com/m.ikhsanp1/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-facebook"></i>
             </a>
           </div>
         </div>
@@ -296,6 +302,9 @@
           ></a>
           <a href="https://www.instagram.com/m.ikhsanp1/"
             ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://www.instagram.com/m.ikhsanp1/"
+            ><i class="fab fa-facebook"></i
           ></a>
         </div>
       </div>
