--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="assets/San.jpg" />
     <meta property="og:url" content="" />
     <title>M. Ikhsan Pasaribu - Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -25,6 +25,16 @@
     <link rel="icon" type="image/png" href="favicon/I for Ikhsan.png" />
     <link rel="apple-touch-icon" href="favicon/M word.png" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init({
+            publicKey: "wneew0Q4O9icVBmms",
+          });
+      })();
+    </script>
   </head>
   <body>
     <!-- Navigation -->
@@ -312,7 +322,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="/src/script.js"></script>
     <a href="" class="back-to-top">
       <i class="fas fa-arrow-up"></i>
     </a>
