--- a/index.html
+++ b/index.html
@@ -304,19 +304,12 @@
       <div class="footer-content">
         <p>&copy; 2023 M. Ikhsan Pasaribu. All rights reserved.</p>
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/mikhsanpasaribu/"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-          <a href="https://github.com/MIkhsanPasaribu"
-            ><i class="fab fa-github"></i
-          ></a>
-          <a href="https://www.instagram.com/m.ikhsanp1/"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="https://www.instagram.com/m.ikhsanp1/"
-            ><i class="fab fa-facebook"></i
-          ></a>
+          <a href="https://www.linkedin.com/in/mikhsanpasaribu/"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/MIkhsanPasaribu"><i class="fab fa-github"></i></a>
+          <a href="https://www.instagram.com/m.ikhsanp1/"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/m.ikhsanp1/"><i class="fab fa-facebook"></i></a>
         </div>
+        <a href="/admin/login.html" class="admin-link">Admin</a>
       </div>
     </footer>
 
