chore: remove main.js file as it is no longer needed
The main.js file was deleted as it is no longer required in the project. This cleanup helps reduce unnecessary code and maintain a cleaner codebase.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
         <ul class="nav-links">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#education">Education</a></li>
           <li><a href="#skills">Skills</a></li>
+          <li><a href="#certifications">Certifications</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -206,6 +209,135 @@
               <span>Scikit-learn</span>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Experience Section -->
+    <section id="experience">
+      <h2 data-aos="fade-up">Experience</h2>
+      <div class="timeline-container" data-aos="fade-up" data-aos-delay="300">
+        <!-- Example experience item based on your LinkedIn -->
+        <div class="timeline-item">
+          <div class="timeline-content">
+            <div class="organization">
+              <img src="assets/unp-logo.png" alt="Universitas Negeri Padang">
+              <h3>Assistant Lecturer for Journal Editorial</h3>
+            </div>
+            <p class="company">Universitas Negeri Padang</p>
+            <p class="period">Aug 2024 - Present · 9 mos</p>
+            <p class="location">West Sumatra, Indonesia · Hybrid</p>
+            <p>Responsible for assisting lecturer in editing journals to be published in the Journal of Computer Engineering and Informatics (JTEKI) on the website jteki.ppj.unp.ac.id</p>
+            <div class="skills">
+              <span>Journal</span>
+            </div>
+          </div>
+        </div>
+        
+        <div class="timeline-item">
+          <div class="timeline-content">
+            <div class="organization">
+              <img src="assets/genbi-logo.png" alt="GenBI UNP">
+              <h3>Member of Public Health Environmental Division</h3>
+            </div>
+            <p class="company">Generasi Baru Indonesia (GenBI)</p>
+            <p class="period">Oct 2024 - Present · 7 mos</p>
+            <p class="location">Indonesia · Hybrid</p>
+            <p>As a member of the Environmental and Public Health Division at GenBI UNP, I contributed to organizing programs and initiatives promoting environmental sustainability and public health awareness.</p>
+            <div class="skills">
+              <span>Project Management</span>
+              <span>Project Planning</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education">
+      <h2 data-aos="fade-up">Education</h2>
+      <div class="timeline-container" data-aos="fade-up" data-aos-delay="300">
+        <div class="timeline-item">
+          <div class="timeline-content">
+            <div class="organization">
+              <img src="assets/unp-logo.png" alt="Universitas Negeri Padang">
+              <h3>Universitas Negeri Padang</h3>
+            </div>
+            <p class="degree">Bachelor's degree, Informatics Engineering Education, Informatics</p>
+            <p class="period">Aug 2023 - Present</p>
+            <p>Currently undergoing semester 4 at the Informatics Engineering Education study program, Padang State University</p>
+            <div class="skills">
+              <span>Data Structures</span>
+              <span>Algorithm Analysis</span>
+            </div>
+          </div>
+        </div>
+        
+        <div class="timeline-item">
+          <div class="timeline-content">
+            <div class="organization">
+              <img src="assets/sman1-logo.png" alt="SMAN 1 Tembilahan">
+              <h3>SMAN 1 Tembilahan</h3>
+            </div>
+            <p class="degree">High School Diploma, Mathematics and Natural Science</p>
+            <p class="period">Jan 2020 - Jun 2023</p>
+            <p>Grade: 91.88</p>
+            <p>Has completed high school at Tembilahan City 1 High School with the last rank obtained in class 12 (3rd year of High School), namely rank 3 in class 12 MIPA 4 with an average score on the diploma of 91.88.</p>
+            <div class="skills">
+              <span>Team Management</span>
+              <span>Team Leadership</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Licenses & Certifications Section -->
+    <section id="certifications">
+      <h2 data-aos="fade-up">Licenses & Certifications</h2>
+      <div class="certifications-container" data-aos="fade-up" data-aos-delay="300">
+        <div class="certification-card">
+          <div class="organization">
+            <img src="assets/google-cloud-logo.png" alt="Google Cloud">
+            <div>
+              <h3>Google Cloud Skills Boost</h3>
+            </div>
+          </div>
+          <div class="content">
+            <h3>Automate Data Capture at Scale with Document AI</h3>
+            <p class="issued-date">Issued Feb 2025</p>
+            <p class="credential-id">Credential ID 13851599</p>
+            <a href="#" class="show-credential">Show credential</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Organizations Section -->
+    <section id="organizations">
+      <h2 data-aos="fade-up">Organizations</h2>
+      <div class="organizations-container" data-aos="fade-up" data-aos-delay="300">
+        <div class="organization-card">
+          <img src="assets/genbi-logo.png" alt="GenBI UNP" class="logo">
+          <h3>Generasi Baru Indonesia (GenBI)</h3>
+          <p class="role">Member of Public Health Environmental Division</p>
+          <p class="period">Oct 2024 - Present · 7 mos</p>
+          <p class="location">Indonesia · Hybrid</p>
+          <p>As a member of the Environmental and Public Health Division at GenBI UNP, I contributed to organizing programs and initiatives promoting environmental sustainability and public health awareness.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Honors & Awards Section -->
+    <section id="awards">
+      <h2 data-aos="fade-up">Honors & Awards</h2>
+      <div class="awards-container" data-aos="fade-up" data-aos-delay="300">
+        <div class="award-card">
+          <div class="icon"><i class="fas fa-trophy"></i></div>
+          <h3>Top 3 in Class 12 MIPA 4</h3>
+          <p class="issuer">SMAN 1 Tembilahan</p>
+          <p class="date">June 2023</p>
+          <p>Achieved rank 3 in class 12 MIPA 4 with an average score of 91.88 on the diploma.</p>
         </div>
       </div>
     </section>
