feat: add card animation and restructure timeline layout
Introduce a new card animation function to enhance user experience by animating timeline, certification, organization, and award cards. Additionally, restructure the timeline layout to improve readability and consistency across sections. The changes include:
- Adding staggered animation delays for cards
- Moving timeline styles to a separate CSS file
- Refactoring HTML structure for better maintainability

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="og:url" content="" />
     <title>M. Ikhsan Pasaribu - Portfolio</title>
     <link rel="stylesheet" href="/src/style.css" />
+    <link rel="stylesheet" href="src/timeline.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -217,37 +218,36 @@
     <section id="experience">
       <h2 data-aos="fade-up">Experience</h2>
       <div class="timeline-container" data-aos="fade-up" data-aos-delay="300">
-        <!-- Example experience item based on your LinkedIn -->
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <div class="organization">
-              <img src="assets/unp-logo.png" alt="Universitas Negeri Padang">
-              <h3>Assistant Lecturer for Journal Editorial</h3>
-            </div>
-            <p class="company">Universitas Negeri Padang</p>
-            <p class="period">Aug 2024 - Present · 9 mos</p>
-            <p class="location">West Sumatra, Indonesia · Hybrid</p>
-            <p>Responsible for assisting lecturer in editing journals to be published in the Journal of Computer Engineering and Informatics (JTEKI) on the website jteki.ppj.unp.ac.id</p>
-            <div class="skills">
-              <span>Journal</span>
-            </div>
+        <div class="timeline-content">
+          <div class="organization">
+            <img src="assets/unp-logo.png" alt="Universitas Negeri Padang">
+            <h3>Assistant Lecturer for Journal Editorial</h3>
+          </div>
+          <p class="company">Universitas Negeri Padang</p>
+          <div class="meta-info">
+            <span class="period">Aug 2024 - Present · 9 mos</span>
+            <span class="location">West Sumatra, Indonesia · Hybrid</span>
+          </div>
+          <p>Responsible for assisting lecturer in editing journals to be published in the Journal of Computer Engineering and Informatics (JTEKI) on the website jteki.ppj.unp.ac.id</p>
+          <div class="skills">
+            <span>Journal</span>
           </div>
         </div>
         
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <div class="organization">
-              <img src="assets/genbi-logo.png" alt="GenBI UNP">
-              <h3>Member of Public Health Environmental Division</h3>
-            </div>
-            <p class="company">Generasi Baru Indonesia (GenBI)</p>
-            <p class="period">Oct 2024 - Present · 7 mos</p>
-            <p class="location">Indonesia · Hybrid</p>
-            <p>As a member of the Environmental and Public Health Division at GenBI UNP, I contributed to organizing programs and initiatives promoting environmental sustainability and public health awareness.</p>
-            <div class="skills">
-              <span>Project Management</span>
-              <span>Project Planning</span>
-            </div>
+        <div class="timeline-content">
+          <div class="organization">
+            <img src="assets/genbi-logo.png" alt="GenBI UNP">
+            <h3>Member of Public Health Environmental Division</h3>
+          </div>
+          <p class="company">Generasi Baru Indonesia (GenBI)</p>
+          <div class="meta-info">
+            <span class="period">Oct 2024 - Present · 7 mos</span>
+            <span class="location">Indonesia · Hybrid</span>
+          </div>
+          <p>As a member of the Environmental and Public Health Division at GenBI UNP, I contributed to organizing programs and initiatives promoting environmental sustainability and public health awareness.</p>
+          <div class="skills">
+            <span>Project Management</span>
+            <span>Project Planning</span>
           </div>
         </div>
       </div>
