refactor(timeline): restructure timeline layout and consolidate event listeners
Restructured the timeline layout by removing redundant `.timeline-item` wrappers and introducing a `.meta-info` container for better organization. Consolidated duplicate `DOMContentLoaded` event listeners to improve code maintainability and performance.

--- a/index.html
+++ b/index.html
@@ -257,36 +257,36 @@
     <section id="education">
       <h2 data-aos="fade-up">Education</h2>
       <div class="timeline-container" data-aos="fade-up" data-aos-delay="300">
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <div class="organization">
-              <img src="assets/unp-logo.png" alt="Universitas Negeri Padang">
-              <h3>Universitas Negeri Padang</h3>
-            </div>
-            <p class="degree">Bachelor's degree, Informatics Engineering Education, Informatics</p>
-            <p class="period">Aug 2023 - Present</p>
-            <p>Currently undergoing semester 4 at the Informatics Engineering Education study program, Padang State University</p>
-            <div class="skills">
-              <span>Data Structures</span>
-              <span>Algorithm Analysis</span>
-            </div>
+        <div class="timeline-content">
+          <div class="organization">
+            <img src="assets/unp-logo.png" alt="Universitas Negeri Padang">
+            <h3>Universitas Negeri Padang</h3>
+          </div>
+          <p class="degree">Bachelor's degree, Informatics Engineering Education, Informatics</p>
+          <div class="meta-info">
+            <span class="period">Aug 2023 - Present</span>
+          </div>
+          <p>Currently undergoing semester 4 at the Informatics Engineering Education study program, Padang State University</p>
+          <div class="skills">
+            <span>Data Structures</span>
+            <span>Algorithm Analysis</span>
           </div>
         </div>
         
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <div class="organization">
-              <img src="assets/sman1-logo.png" alt="SMAN 1 Tembilahan">
-              <h3>SMAN 1 Tembilahan</h3>
-            </div>
-            <p class="degree">High School Diploma, Mathematics and Natural Science</p>
-            <p class="period">Jan 2020 - Jun 2023</p>
-            <p>Grade: 91.88</p>
-            <p>Has completed high school at Tembilahan City 1 High School with the last rank obtained in class 12 (3rd year of High School), namely rank 3 in class 12 MIPA 4 with an average score on the diploma of 91.88.</p>
-            <div class="skills">
-              <span>Team Management</span>
-              <span>Team Leadership</span>
-            </div>
+        <div class="timeline-content">
+          <div class="organization">
+            <img src="assets/sman1-logo.png" alt="SMAN 1 Tembilahan">
+            <h3>SMAN 1 Tembilahan</h3>
+          </div>
+          <p class="degree">High School Diploma, Mathematics and Natural Science</p>
+          <div class="meta-info">
+            <span class="period">Jan 2020 - Jun 2023</span>
+          </div>
+          <p>Grade: 91.88</p>
+          <p>Has completed high school at Tembilahan City 1 High School with the last rank obtained in class 12 (3rd year of High School), namely rank 3 in class 12 MIPA 4 with an average score on the diploma of 91.88.</p>
+          <div class="skills">
+            <span>Team Management</span>
+            <span>Team Leadership</span>
           </div>
         </div>
       </div>
